# ticoi

./: .gitignore  .pre-commit-config.yaml  .relint.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_output.md  README_possible_parameters.md  README_visualization_pixel_output.md  Visualization_pixel_output.md  environment.yml  generate_yml_from_requirement.py  pyproject.toml  requirements.txt  ticoi_env.yml
.github/workflows/: generate_yml_from_requirement.yml  pre-commit.yml  pylint.yml  pypi-publish.yml  python-app.yml  python-test-hatch.yml  test_hatch.yml
examples/: cube_seasonality_analysis.py  cube_ticoi_3d_inversion.py  cube_ticoi_demo.py  cube_ticoi_demo_lei.py  cube_ticoi_demo_simple.py  cube_ticoi_demo_with_flag.py  data_availability.py  geotiff_to_xarray.py  geotiff_to_xarray_glac_flag.py  pixel_seasonality_analysis.py  pixel_ticoi_demo.py  pixel_ticoi_demo_notebook.ipynb  ticoi_cube_demo.py  ticoi_cube_demo_block_process.py  ticoi_cube_demo_block_process_tico.py  ticoi_cube_demo_lei.py  ticoi_pixel_demo.py  ticoi_pixel_demo_lei.py
examples/advanced/: cube_prep_from_geotiff.py  cube_seasonality_analysis.py  cube_ticoi_demo_IGE_Pleiades.py  cube_ticoi_demo_IGE_S2.py  cube_ticoi_demo_TerraTrack.py  cube_ticoi_demo_advanced.py  cube_ticoi_demo_its_live.py  custom_loader.py  data_availability.py  geotiff_to_xarray.py  glaft_argentiere_interp.csv  glaft_for_ticoi_results.py  pixel_seasonality_analysis.py  stats_in_static_areas.py  visual_results_along_line.py  visual_results_from_cube.py
examples/advanced/Demo_for_different_datasets/: cube_ticoi_demo_IGE_Pleiades.py  cube_ticoi_demo_IGE_S2.py  cube_ticoi_demo_TerraTrack.py  pixel_ticoi_demo_TerraTrack.py
examples/advanced/demo_for_different_datasets/: cube_ticoi_demo_TerraTrack.py  cube_ticoi_demo_its_live.py  pixel_ticoi_demo_TerraTrack.py
examples/advanced/example_not_running/: cube_seasonality_analysis.py  data_availability.py  pixel_seasonality_analysis.py
examples/advanced/hyperparameter_choice/: coef_regu_based_on_vvc.py
examples/advanced/optimize_coef/: cube_optimize_ticoi_coef.py  pixel_optimize_coef_nvcc.py  pixel_optimize_ticoi_coef.py
examples/advanced/quality_metrics/: VVC.ipynb
examples/advanced_processing/: cube_optimize_ticoi_coef.py  cube_seasonality_analysis.py  cube_ticoi_demo_advanced.py  cube_ticoi_demo_its_live.py  cube_ticoi_demo_with_flag.py  data_availability.py  geotiff_to_xarray.py  geotiff_to_xarray_glac_flag.py  geotiff_to_xarray_sar.py  pixel_optimize_coef_nvcc.py  pixel_optimize_ticoi_coef.py  pixel_seasonality_analysis.py  visual_results_along_line.py  visual_results_from_cube.py
examples/advanced_processing/optimize_coef/: cube_optimize_coef_nvcc.py  cube_optimize_ticoi_coef.py  pixel_optimize_coef_nvcc.py  pixel_optimize_ticoi_coef.py
examples/results/: Argentiere_example_interp.nc  Argentiere_example_mean_velocity.tiff
examples/results/cube/: test.nc  (+6 more)
src/ticoi/: core.py  cube_data_classxr.py  cube_data_classxr_new.py  cube_writer.py  custom_loader.py  example.py  filtering_functions.py  interpolation_functions.py  inversion_functions.py  mjd2date.py  optimize_coefficient_functions.py  pixel_class.py  seasonality_functions.py  utils.py
test_data/: Alpes_RGI7.dbf  Alpes_RGI7.shp  Alpes_RGI7.shx  Alps_Mont-Blanc_flags.nc  Argentiere_iceflow.gpkg  Argentiere_static.gpkg  ITS_LIVE_Lowell_Lower_test.nc.aux.xml
test_data/Lowell/: Lowell_Lower_v_shared.csv
tests/: geotiff_to_xarray.py  organize_data.py  test.py  test_cube_data_class.py  test_example.py  test_filtering_functions.py  test_inversion_functions.py  test_obj_setup.py  test_organize_data.py  test_secondary_functions.py  to_delete.py
ticoi/: .fuse_hidden0000c09800000005  core.py  cube_3d_class.py  cube_data_classxr.py  cube_writer.py  filtering_functions.py  interpolation_functions.py  inversion_functions.py  mjd2date.py  optimize_coefficient_functions.py  other_functions.py  pixel_class.py  seasonality_functions.py  secondary_functions.py  utilis.py  utils.py  visualization_functions.py
(+13 files in other folders)
