[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticoi"
version = "0.1.4"
authors = [
  { name="Laurane Charrier", email="laurane.charrier@outlook.com" },{ name="Lei Guo"}
]
description = "A package to run an Temporal Inversion based on the temporal ClOsure of the measurement network, and Interpolation (TICOI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]

dependencies = [
  "aiohttp",
  "dask",
  "fiona",
  "geopandas>=0.10.0",
  "h5netcdf",
  "h5py>=3.11",
  "jdcal",
  "matplotlib==3.*",
  "netcdf4",
  "notebook",
  "numba==0.*",
  "numpy==1.*",
  "pandas",
  "pip",
  "pyproj>=3.4",
  "rasterio>=1.3",
  "requests",
  "rioxarray",
  "scikit-learn",
  "scipy==1.*",
  "seaborn",
  "shapely",
  "statsmodels",
  "tqdm",
  "xarray",
  "zarr"
]
[project.urls]
Homepage = "https://github.com/ticoi/ticoi.git"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.envs.dev]
inherit = ["default"]
dependencies = [
  "ruff",
  "pytest",
  "pre-commit",
  "ipykernel",
]

[tool.pytest.ini_options]
testpaths = "."

[tool.hatch.publish.index-repositories]
testpypi = "https://test.pypi.org/legacy/"
