[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticoi"
version = "0.2.2"
authors = [
  { name="Laurane Charrier", email="laurane.charrier@outlook.com" },{ name="Lei Guo"}
]
description = "A package to run an Temporal Inversion based on the temporal ClOsure of the measurement network, and Interpolation (TICOI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]

dependencies = [
  "aiohttp",
  "dask",
  "fiona",
  "geopandas",
  "h5netcdf",
  "h5py",
  "jdcal",
  "matplotlib",
  "netcdf4",
  "notebook",
  "numba",
  "numpy",
  "pandas",
  "pyproj",
  "rasterio",
  "requests",
  "rioxarray",
  "scikit-learn",
  "scipy",
  "seaborn",
  "shapely",
  "statsmodels",
  "tqdm",
  "xarray",
  "zarr"
]
[project.urls]
Homepage = "https://github.com/ticoi/ticoi.git"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.envs.dev]
inherit = ["default"]
dependencies = [
  "ruff",
  "pytest",
  "pre-commit",
]
[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning"]
