[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticoi"
dynamic = ["version"] #dynamic versioning
authors = [
  { name="Laurane Charrier", email="laurane.charrier@outlook.com" },{ name="Lei Guo"}
]
description = "A package to run Temporal Inversion using linear Combinations of Observations, and Interpolation (TICOI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]

dependencies = [
  "aiohttp",
  "dask",
  "geopandas",
  "jdcal",
  "joblib",
  "h5netcdf",
  "matplotlib",
  "notebook",
  "numba",
  "numpy",
  "pandas",
  "pyproj",
  "rasterio",
  "requests",
  "rioxarray",
  "scipy",
  "scikit-learn",
  "seaborn",
  "shapely",
  "statsmodels",
  "tqdm",
  "xarray",
  "zarr"
]



[project.urls]
Homepage = "https://github.com/ticoi/ticoi.git"
Issues = "https://github.com/pypa/sampleproject/issues"


[tool.hatch.version]
path = "src/ticoi/__about__.py"

[tool.hatch.envs.dev]
inherit = ["default"]
dependencies = [
  "ruff",
  "pytest",
  "pre-commit"
]

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10","3.11", "3.12"]

[tool.ruff]
line-length = 120

#[tool.pytest.ini_options]
#filterwarnings = [
#    "error",
#    "ignore::UserWarning"]
